# vantage-mcp

./: .gitignore  .mcp.json  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.en.md  README.ja.md  README.md  RELEASE_NOTES_v0.2.0.md  dev-server.sh  history.txt  ichimi_export.json  index.html  install-local.sh  install.sh  package.json  release-notes-beta10.md  release-notes-beta11.md  release-notes-v0.2.3.md  rust-toolchain.toml  test-graceful-shutdown.ts  test-report-1758382547562.json  test-report-1758382649953.json  test-simple-graceful.sh  test_auto_start.sh  test_continue_on_shutdown.sh  test_db_direct.sh  test_generated.kdl  test_graceful_shutdown.sh  test_kdl_format.rs  test_mcp.sh  test_quick.sh  test_shutdown.sh  test_shutdown_detailed.sh  test_simple.sh  test_snapshot.rs  (+3 more)
.claude/: CLAUDE.md  ICHIMI_SERVER.md  ROCKSDB_LOCAL_SETUP.md  settings.local.json
.diarkis/database.db/: 000018.sst  IDENTITY  LOG  LOG.old.1760389198983786  LOG.old.1760417147162897  LOG.old.1760417147168280  LOG.old.1760432784581473  LOG.old.1760633084876803  MANIFEST-000019  OPTIONS-000007
.github/: BRANCH_PROTECTION.md  RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.ichimi/: processes.kdl  snapshot.surql
.mcp_test/: test_mcp_client.js  test_mcp_client.py  test_process.sh  test_requests.jsonl
.serena/: project.yml
.serena/memories/: code_structure.md  code_style_conventions.md  environment_variables.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
.test_continuous/: cpu_intensive.sh  error_process.sh  long_running.sh  send_mcp.sh
.test_tmp/: test_process.sh
Formula/: ichimi-server.rb  vantage-mcp.rb
crates/ichimi/: Cargo.toml
crates/ichimi-mcp/: Cargo.toml
crates/ichimi-mcp/src/: error.rs  lib.rs  main.rs
crates/ichimi-persistence/: Cargo.toml
crates/ichimi-persistence/examples/: save_snapshot.rs  test_kdl.rs
crates/ichimi-persistence/migrations/: 20241229_000001_initial_schema.sql  20241229_000002_processes_and_templates.sql
crates/ichimi-persistence/src/: kdl_serde.rs  lib.rs  snapshot.rs  types.rs
crates/ichimi-persistence/src/database/: migrations.rs  mod.rs  models.rs  queries.rs
crates/ichimi-persistence/src/db/: mod.rs
crates/ichimi-persistence/src/persistence/: manager.rs
crates/ichimi-persistence/src/yaml/: mod.rs
crates/ichimi-persistence/tests/: test_database.rs
crates/ichimi/src/: error.rs  lib.rs
crates/ichimi/src/ci/: mod.rs
crates/ichimi/src/db/: mod.rs
crates/ichimi/src/events/: mod.rs
crates/ichimi/src/learning/: mod.rs
crates/ichimi/src/lib/stores/: processes.ts
crates/ichimi/src/messages/: ci.rs  clipboard.rs  mod.rs  process.rs  snapshot.rs
crates/ichimi/src/persistence/: manager.rs
crates/ichimi/src/process/: manager.rs  mod.rs  protocol.rs  shell.rs
crates/ichimi/src/security/: mod.rs
crates/ichimi/src/web/: api.rs  assets.rs  handlers.rs  mod.rs  server.rs
crates/ichimi/tests/: test_browser.rs  test_browser_mcp.rs  test_integration.rs  test_integration_export_import.rs  test_process_update.rs  test_unit_persistence.rs  test_unit_surrealdb.rs  test_web_api.rs
crates/vantage/: Cargo.toml
crates/vantage-atom/: Cargo.toml
crates/vantage-atom/src/: error.rs  lib.rs
crates/vantage-atom/src/lib/components/: CreateProcessModal.svelte
crates/vantage-atom/src/messages/: mod.rs  snapshot.rs  suggestions.rs  template.rs
crates/vantage-atom/src/process/: manager.rs
crates/vantage-atom/src/web/: mod.rs  server.rs
crates/vantage-atom/tests/: test_browser.rs  test_browser_mcp.rs  test_integration.rs  test_process_update.rs  test_template_integration.rs  test_web_api.rs
crates/vantage-mcp/: Cargo.toml
crates/vantage-mcp/src/: error.rs  lib.rs  main.rs
crates/vantage-persistence/: Cargo.toml
crates/vantage/src/: lib.rs
crates/vantage/src/lib/components/: LogViewer.svelte
crates/vantage/src/lib/types/: index.ts
crates/vantage/src/messages/: clipboard.rs  mod.rs  process.rs
crates/vantage/src/process/: manager.rs  mod.rs  protocol.rs  types.rs
crates/vantage/src/web/: assets.rs  handlers.rs  server.rs
crates/vantage/tests/: test_browser.rs  test_integration.rs  test_process_update.rs  test_web_api.rs
docs/: README.ja.md  README.md  release-notes-v0.2.3.md  server-flows.md  specifications.md  testing-chrome-mcp.md  testing.md  web-ui-design.md
docs/api/: README.md
docs/architecture/: README.md
docs/guides/: installation.md  usage.md
examples/: ichimi.kdl  test_kdl_config.rs  test_persistence.rs  vantage.kdl
scripts/: build-and-install.sh  bump-version.sh  determine-bump-type.sh  download-assets.sh  release.sh  verify_install.sh
scripts/tests/: README.md  run_all_tests.sh  test_auto_start.sh  test_db_persistence.sh  test_mcp_protocol.sh  test_shutdown.sh
spec/: README.md  SUMMARY.md
spec/architecture/: directory-structure.md
spec/pages/: processes.md  templates.md
spec/processes/: auto-start.md  lifecycle.md  shutdown.md
src/: App.svelte  error.rs  lib.rs  model.rs  persistence.rs
src/ci/: mod.rs
src/db/: mod.rs
src/events/: mod.rs
src/learning/: mod.rs
src/messages/: basic.rs  ci.rs  mod.rs  process.rs  suggestions.rs
src/persistence/: kdl_persistence.rs  kdl_schema.rs  manager.rs  mod.rs
src/process/: buffer.rs  manager.rs  mod.rs  template.rs  types.rs
src/security/: mod.rs
src/tests/: graceful-process.ts  graceful-shutdown-test-suite.ts  graceful-shutdown-test.ts  simple-graceful-test.ts  simple-sigterm-test.ts  slow-graceful-process.ts  stubborn-process.ts
src/utils/: api-client.ts  test-utils.ts
src/web/: api.rs  assets.rs  handlers.rs  (+2 more)
static/: index.html
templates/: base.tera  index.tera
tests/: test_auto_start.rs  test_e2e_browser.md  test_integration.rs  test_integration_export_import.rs  test_mcp_integration.rs  test_persistence.rs  test_process_manager.rs  test_process_update.rs  test_unit_persistence.rs  test_unit_surrealdb.rs
web-console/: build.ts  package.json  test.html
web-svelte/: package-lock.json  package.json
(+100 files in other folders)
