[workspace]
members = ["crates/ichimi", "crates/ichimi-persistence", "crates/ichimi-mcp"]
resolver = "2"

[workspace.package]
version = "0.2.3"
authors = ["mito@chronista.club"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chronista-club/ichimi-server"

[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "0.8.1", features = ["server", "transport-io"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
