[package]
name = "ichimi-persistence"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistence layer for ichimi-server using SurrealDB"

[dependencies]
# Database
surrealdb = { version = "2.3", features = ["kv-mem"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
nanoid = "0.4"
uuid = { version = "1.18", features = ["v4", "serde"] }