[package]
name = "ichimi-persistence"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistence layer for ichimi-server"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
# KDL support (for configuration files)
kdl = "4.7"
serde_kdl = "0.1"

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
nanoid = "0.4"
uuid = { version = "1.18", features = ["v4", "serde"] }

# System info
hostname = "0.3"
dirs = "5.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate", "uuid"] }

[dev-dependencies]
tempfile = "3.8"