[package]
name = "vantage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Vantage - A powerful process management server for Claude Code via Model Context Protocol (MCP)"
license.workspace = true
repository.workspace = true
keywords = ["mcp", "process-management", "claude", "server", "orchestration"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core atom library
vantage-atom = { path = "../vantage-atom", features = [] }

[features]
default = []
web = ["vantage-atom/web"]